--- a/index_list.html
+++ b/index_list.html
@@ -100,8 +100,13 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>登入首頁：儀錶板</td>
-                        <td><a href="index.htm" target="_blank"></a></td>
+                        <td>登入首頁</td>
+                        <td>
+                            <ul>
+                                <li>儀錶板 <a href="index.htm" target="_blank"></a></li>
+                                <li>公告內容 <a href="data_announcement.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
                     </tr>
                     <tr>
                         <td></td>
@@ -206,6 +211,30 @@
             </table>
         </div>
 
+        <div class="table_wrapper" style="display:none;">
+            <table>
+              <caption>TICC AP功能 - 4/25更新</caption>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：場地管理</td>
+                        <td>
+                            <ul>
+                                <li>1.場地清單 <a href="#" target="_blank"></a></li>
+                                <li>2.新增/編修場地 <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
 
     </div>
