--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td class="text-left"><a href="#">撈取最新公告條列呈現(要連去哪？)</a></td>
+                                                    <td class="text-left"><a href="data_announcement.htm">撈取最新公告條列呈現：(公告標題)[系統公告]無法順利轉檔情況處理之說明</a></td>
                                                     <td class="text-right">2022-04-17</td>
                                                 </tr>
                                                 <tr>
