--- a/aside.htm
+++ b/aside.htm
@@ -1,7 +1,7 @@
 <aside>
     <h1>
         <a href="index.htm">
-            <img src="images/logo_vod.png" alt=""><span>台中視界網<br>網站管理平台</span>
+            <img src="images/TJ_logo.png" alt=""><span>台中視界網<br>網站管理平台</span>
         </a>
     </h1>
     <!-- menu -->
