--- a/login.htm
+++ b/login.htm
@@ -28,9 +28,9 @@
         <div class="login">
             <h1>
                 <div class="pic">
-                    <img src="images/W_logo.png" alt="">
+                    <img src="images/TJ_logo.png" alt="">
                 </div>
-                <span>W CMS Lite 網站管理平台</span>
+                <span>台中視界網 網站管理平台</span>
             </h1>
             <div class="flex-form">
                 <div class="form_grp">
