--- a/index.htm
+++ b/index.htm
@@ -121,27 +121,27 @@
                                                 <tr>
                                                     <td>1</td>
                                                     <td class="text-left"><a href="data_announcement.htm">撈取最新公告條列呈現：(公告標題)[系統公告]無法順利轉檔情況處理之說明</a></td>
-                                                    <td class="text-right">2022-04-17</td>
+                                                    <td class="data">2022-04-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
-                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
-                                                    <td class="text-right">2020-09-17</td>
+                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的12345</a></td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
                                                     <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
-                                                    <td class="text-right">2020-09-17</td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>4</td>
                                                     <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
-                                                    <td class="text-right">2020-09-17</td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>5</td>
                                                     <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
-                                                    <td class="text-right">2020-09-17</td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                             </tbody>
                                         </table>
