--- a/index_list.html
+++ b/index_list.html
@@ -96,7 +96,9 @@
                     <tr>
                         <td></td>
                         <td>登入頁</td>
-                        <td><a href="login.htm" target="_blank"></a></td>
+                        <td><a href="login.htm" target="_blank"></a>
+                            <p>新增 for VOD 使用的 logo「TJ_logo.png」</p>
+                        </td>
                     </tr>
                     <tr>
                         <td></td>
