--- a/login.htm
+++ b/login.htm
@@ -29,6 +29,7 @@
             <h1>
                 <div class="pic">
                     <img src="images/TJ_logo.png" alt="">
+                    <!--img src="images/W_logo.png" alt="W CMS Lite"-->
                 </div>
                 <span>台中視界網 網站管理平台</span>
             </h1>
