--- a/index_list.html
+++ b/index_list.html
@@ -96,8 +96,8 @@
                     <tr>
                         <td></td>
                         <td>登入頁</td>
-                        <td><a href="login.htm" target="_blank"></a>
-                            <p>新增 for VOD 使用的 logo「TJ_logo.png」</p>
+                        <td><a href="login.htm" target="_blank"></a><br>
+                            新增 for VOD 使用的 logo <img src="images/TJ_logo.png" style="width:30px;vertical-align:middle;">
                         </td>
                     </tr>
                     <tr>
