--- a/userList.htm
+++ b/userList.htm
@@ -78,7 +78,7 @@
                                                     <label>單位</label>
                                                 </div>
                                             </div>
-                                        </div>
+                                            <!--層級放錯，要放進 flex-form flex-6-6 這一層-->
                                             <div class="form_grp">
                                                 <div class="labelEffect">
                                                     <select name="search_deptid" id="search_deptid">
@@ -90,6 +90,7 @@
                                                     <label>權限群組</label>
                                                 </div>
                                             </div>
+                                        </div>
                                         </div>
                                         <div class="btn_grp">
                                             <button class="btn reset">取消</button>
