--- a/index_list.html
+++ b/index_list.html
@@ -97,7 +97,7 @@
                         <td></td>
                         <td>登入頁</td>
                         <td><a href="login.htm" target="_blank"></a><br>
-                            新增 for VOD 使用的 logo <img src="images/TJ_logo.png" style="width:30px;vertical-align:middle;">
+                            *4/28: 新增 for VOD 使用的 logo <img src="images/TJ_logo.png" style="width:30px;vertical-align:middle;">（替換登入頁和aside logo圖）
                         </td>
                     </tr>
                     <tr>
@@ -137,7 +137,8 @@
                         <td>系統管理：使用者</td>
                         <td>
                             <ul>
-                                <li>使用者清單 <a href="userList.htm" target="_blank"></a></li>
+                                <li>使用者清單 <a href="userList.htm" target="_blank"></a><br>
+                                    4/28: 搜尋條件「權限群組」層級放錯</li>
                                 <li>使用者編輯/新增 <a href="userEdit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
@@ -155,7 +156,9 @@
                     <tr>
                         <td></td>
                         <td>系統管理：登入記錄查詢</td>
-                        <td><a href="userLogList.htm" target="_blank"></a></td>
+                        <td><a href="userLogList.htm" target="_blank"></a><br>
+                            *4/28: 修正處理 Animated Labels for date/datetime-local 會卡在一起的效果
+                        </td>
                     </tr>
                     <tr>
                         <td></td>
@@ -187,12 +190,18 @@
                         <td>內容管理：資料上稿</td>
                         <td>
                             <ul>
-                                <li>快速上稿 <a href="data_list_noTree.htm" target="_blank"></a></li>
+                                <li>快速上稿 <a href="data_list_noTree.htm" target="_blank"></a><br>
+                                    *4/28: 修正處理 Animated Labels for date/datetime-local 會卡在一起的效果</li>
                                 <li>單元上稿 <a href="data_list.htm" target="_blank"></a></li>
-                                <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a></li>
-                                <li>編修資料 <a href="data_new2.htm" target="_blank"></a></li>
+                                <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a><br>
+                                    *4/28: (1)修正處理 Animated Labels for date/datetime-local 會卡在一起的效果；(2)圖檔/檔案上傳區塊的註解文字，需同時更新 fileUpload.css</li>
+                                <!--li>編修資料 <a href="data_new2.htm" target="_blank"></a></li-->
                             </ul>
-                            <p>Html editor <a href="data_new_htmleditor.htm" target="_blank"></a></p>
+                            <p>測試更新TinyMCE版本：https://www.tiny.cloud/docs-4x/quick-start/</p>
+                            <ul>
+                                <li>Html editor測試(1) <a href="data_new_htmleditor.htm" target="_blank"></a></li>
+                                <li>Html editor測試(2) <a href="data_new_htmleditorv4.htm" target="_blank"></a></li>
+                            </ul>
                         </td>
                     </tr>
                     <tr>
