--- a/login.htm
+++ b/login.htm
@@ -39,7 +39,7 @@
                         <input name="" type="text" value="">
                         <label>請輸入帳號<abbr>*</abbr></label>
                     </div>
-                    <div class="help">說明文字</div>
+                    <!-- <div class="help">請輸入帳號</div> -->
                 </div>
                 <div class="form_grp">
                     <div class="labelEffect password_toggle">
@@ -47,7 +47,6 @@
                         <button class="btn btn-icon"><i class="i_hide"></i></button>
                         <label>請輸入密碼<abbr>*</abbr></label>
                     </div>
-                    <div class="help">說明文字</div>
                 </div>
                 <div class="form_grp">
                     <div class="labelEffect">
@@ -58,6 +57,7 @@
                             <button type="button" class="btn btn_circle"><i class="i_reload"></i></button>
                         </div>
                     </div>
+                    <div class="help">請輸入圖片上的驗證碼英數字</div>
                 </div>
                 <div class="form_grp">
                     <div class="form_content">
