--- a/data_new_update.htm
+++ b/data_new_update.htm
@@ -418,7 +418,7 @@
                                                         <p><em>上傳圖片檔案</em></p>
                                                         <p>拖拉檔案或選擇「從本機上傳」</p>
                                                     </div>
-                                                    <p class="tips">接受MPEG-2,MPEG-4等影片格式，影音編碼說請至公佈欄，檔案大小請勿超過500MB(內網)或250MB(外網)。與本平台現有上架影片內容相同者，不得重複上傳，違者退件。如欲下載已上傳的影片，請在連結上點滑鼠右鍵，選擇"另存目標"。非下述任一影片內容者，一律退件: (A)業務機關自製文創影片(中英);(B)上級機關自製文創影片(中英); (C)其他介紹中市府文創影片(中英)。上傳影片的播放權需為本府所有，若涉及侵權或危害善良風俗者，上傳單位應自負咎責。</p>
+                                                    <p class="tips">請注意：接受JPG,PNG等圖片格式，檔案大小請勿超過1MB。上傳圖片需為本府所有，若涉及侵權或危害善良風俗者，上傳單位應自負咎責。</p>
                     
                                                     <div class="upload_block">
                                                         <!-- item = 1 file -->
@@ -492,7 +492,7 @@
                                                         <p><em>上傳附件檔案</em></p>
                                                         <p>拖拉檔案或選擇「從本機上傳」</p>
                                                       </div>
-                                                      <p class="tips">接受MPEG-2,MPEG-4等影片格式，影音編碼說請至公佈欄，檔案大小請勿超過500MB(內網)或250MB(外網)。與本平台現有上架影片內容相同者，不得重複上傳，違者退件。如欲下載已上傳的影片，請在連結上點滑鼠右鍵，選擇"另存目標"。非下述任一影片內容者，一律退件: (A)業務機關自製文創影片(中英);(B)上級機關自製文創影片(中英); (C)其他介紹中市府文創影片(中英)。上傳影片的播放權需為本府所有，若涉及侵權或危害善良風俗者，上傳單位應自負咎責。</p>
+                                                      <p class="tips">請注意：接受MPEG-2,MPEG-4等影片格式，影音編碼說請至公佈欄，檔案大小請勿超過500MB(內網)或250MB(外網)。與本平台現有上架影片內容相同者，不得重複上傳，違者退件。如欲下載已上傳的影片，請在連結上點滑鼠右鍵，選擇"另存目標"。非下述任一影片內容者，一律退件: (A)業務機關自製文創影片(中英);(B)上級機關自製文創影片(中英); (C)其他介紹中市府文創影片(中英)。上傳影片的播放權需為本府所有，若涉及侵權或危害善良風俗者，上傳單位應自負咎責。</p>
 
                                                       <div class="upload_block">
                                                         <!-- item = 1 file -->
