--- a/index_list.html
+++ b/index_list.html
@@ -77,7 +77,8 @@
 </head>
 <body>
     <div class="demo_wrap">
-        <h1><a href="index_list.html">W CMS管理端</a></h1>
+        <h1><img src="images/W_logo.png" alt="W CMS Lite" style="max-height:50px;width:auto;vertical-align:middle;margin-right:10px;">
+            <a href="index_list.html">W CMS管理端</a></h1>
         <div class="btn_grp" style="float:right;">
             <a href="https://github.com/LiuCC910/CMS_UI" class="btn">切版檔案更新請按此下載</a>
         </div>
