--- a/Chris/index.htm
+++ b/Chris/index.htm
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>W CMS Lite</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
-    <script src="../js/html5shiv.js"></script>
-    <script src="../js/respond.min.js"></script>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
     <![endif]-->
     <!-- hyUI css -->
-    <link rel="stylesheet" href="../css/supercms.css">
+    <link rel="stylesheet" href="css/supercms.css">
     <!-- favicon -->
-    <link href="../images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
-    <link rel="stylesheet" href="../vendor/highlight/github-gist.css">
+    <link rel="stylesheet" href="vendor/highlight/github-gist.css">
 </head>
 
 <body>
@@ -29,44 +29,28 @@
             <!-- breadcrumb路徑 -->
             <div class="breadcrumb">
                 <ul>
-                    <li><a href="index.htm">首頁</a></li>
-                    <li><a href="#">節點</a></li>
-                    <li>節點</li>
+                    <li><a href="index.htm"></a>首頁</a></li>
+                    <li>系統儀錶板</li>
                 </ul>
             </div>
             <!-- gird section -->
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>系統首頁儀表板</h2>
+                        <h2>系統儀錶板</h2>
                     </div>
                     <div class="flex-3-3-3-3">
                         <div class="col">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>今日訪客人數</h3>
+                                    <h3>新增上稿資料</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_now_counter">
-                                            <div class="counter "data-count="1537"></div>
+                                            <div class="counter "data-count="37"></div>
                                         </div>
-                                        <div class="help">時間以...為計算準</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="content_block">
-                                <div class="_head">
-                                    <h3>今日瀏覽量</h3>
-                                </div>
-                                <div class="_content">
-                                    <div class="mp_widget">
-                                        <div class="widget_now_pageview">
-                                            <div class="counter "data-count="97654"></div>
-                                        </div>
-                                        <div class="help">時間以...為計算準</div>
+                                        <div class="help">三日內新增資料數</div>
                                     </div>
                                 </div>
                             </div>
@@ -77,11 +61,26 @@
                                     <h3>待審資料</h3>
                                 </div>
                                 <div class="_content">
+                                    <div class="mp_widget">
+                                        <div class="widget_now_pageview">
+                                            <div class="counter "data-count="54"></div>
+                                        </div>
+                                        <div class="help">待審核資料數</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="content_block">
+                                <div class="_head">
+                                    <h3>目前影片總數</h3>
+                                </div>
+                                <div class="_content">
                                     <div class="mp_widget ">
                                         <div class="widget_now_user">
                                             <div class="counter "data-count="376"></div>
                                         </div>
-                                        <div class="help">時間以...為計算準</div>
+                                        <div class="help">目前線上影片總數</div>
                                     </div>
                                 </div>
                             </div>
@@ -89,43 +88,15 @@
                         <div class="col">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>今日新增資料</h3>
+                                    <h3>待推送 / 推送失敗影片</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="mp_widget">
                                         <div class="widget_new_data">
-                                            <div class="counter "data-count="20">20</div>
+                                            <div class="counter "data-count="20">11</div>
                                         </div>
-                                        <div class="help">時間以...為計算準</div>
+                                        <div class="help">待推送Youtube / 推送失敗影片</div>
                                     </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="flex-8-4">
-                        <div class="col ">
-                            <div class="content_block">
-                                <div class="_head">
-                                    <h3>網站流量</h3>
-                                </div>
-                                <div class="_content">
-                                    <!-- 長條圖 -->
-                                    <figure class="highcharts-figure">
-                                        <div id="axes_line_column1"></div>
-                                    </figure>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="content_block">
-                                <div class="_head">
-                                    <h3>數據分析</h3>
-                                </div>
-                                <div class="_content">
-                                    <!-- 圓餅圖 -->
-                                    <figure class="highcharts-figure">
-                                        <div id="pie1"></div>
-                                    </figure>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +105,7 @@
                         <div class="col ">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>今日熱門網頁</h3>
+                                    <h3>最新公告</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="table_wrapper">
@@ -143,51 +114,34 @@
                                                 <tr>
                                                     <th>序列</th>
                                                     <th>標題</th>
-                                                    <th>瀏覽量</th>
+                                                    <th>發布日期</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a>
-                                                    </td>
-                                                    <td class="text-left">1,523</td>
+                                                    <td class="text-left"><a href="data_announcement.htm">撈取最新公告條列呈現：(公告標題)[系統公告]無法順利轉檔情況處理之說明</a></td>
+                                                    <td class="data">2022-04-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
-                                                    <td class="text-left">
-                                                        <a href="#">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</a>
-                                                    </td>
-                                                    <td class="text-left">823</td>
+                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的12345</a></td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left">253</td>
+                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>4</td>
-                                                    <td class="text-left">
-                                                        <a href="#">期完那照角金直麼應式少說</a>
-                                                    </td>
-                                                    <td class="text-left">102</td>
+                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                                 <tr>
                                                     <td>5</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left">50</td>
-                                                </tr>
-                                                <tr>
-                                                    <td>6</td>
-                                                    <td class="text-left">
-                                                        <a href="#">過比你三觀不比想面發比望麼到發濟家飯年經產</a>
-                                                    </td>
-                                                    <td class="text-left">15</td>
+                                                    <td class="text-left"><a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a></td>
+                                                    <td class="data">2020-09-17</td>
                                                 </tr>
                                             </tbody>
                                         </table>
@@ -195,10 +149,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col">
+                        <div class="col ">
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>公告資訊</h3>
+                                    <h3>熱門影片</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="table_wrapper">
@@ -207,52 +161,42 @@
                                                 <tr>
                                                     <th>序列</th>
                                                     <th>標題</th>
-                                                    <th>發布時間</th>
+                                                    <th>上稿單位</th>
+                                                    <th>瀏覽量</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
                                                     <td>1</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大更沒於正時節直只們來壓算有先，求化化看雨的</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
+                                                    <td class="text-left">大更沒於正時節直只們來壓算有先，求化化看雨的</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">1,523</td>
                                                 </tr>
                                                 <tr>
                                                     <td>2</td>
-                                                    <td class="text-left">
-                                                        <a href="#">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
+                                                    <td class="text-left">司通資鄉下一支情西也哥際發你也是濟言通海後的健童</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">823</td>
                                                 </tr>
                                                 <tr>
                                                     <td>3</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府</td>
+                                                    <td class="text-right">253</td>
                                                 </tr>
                                                 <tr>
                                                     <td>4</td>
-                                                    <td class="text-left">
-                                                        <a href="#">期完那照角金直麼應式少說</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
+                                                    <td class="text-left">期完那照角金直麼應式少說</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">102</td>
                                                 </tr>
                                                 <tr>
                                                     <td>5</td>
-                                                    <td class="text-left">
-                                                        <a href="#">大只再筆不人油畫主甚是活相面飛</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
+                                                    <td class="text-left">大只再筆不人油畫主甚是活相面飛</td>
+                                                    <td class="text-left">台中市政府台中市政府台中市政府</td>
+                                                    <td class="text-right">50</td>
                                                 </tr>
-                                                <tr>
-                                                    <td>6</td>
-                                                    <td class="text-left">
-                                                        <a href="#">過比你三觀不比想面發比望麼到發濟家飯年經產</a>
-                                                    </td>
-                                                    <td class="text-left"><time>2020/01/01</time></td>
-                                                </tr>
+
                                             </tbody>
                                         </table>
                                     </div>
@@ -260,17 +204,19 @@
                             </div>
                         </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
     </div>
     <!-- JS-->
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../vendor/jquery.easing.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="vendor/jquery.easing.min.js"></script>
     <!-- template customize js -->
-    <script src="../js/customize.js"></script>
+    <script src="js/customize.js"></script>
     <!-- highlight -->
-    <script src="../vendor/highlight/highlight.pack.js"></script>
+    <script src="vendor/highlight/highlight.pack.js"></script>
     <script>
     hljs.initHighlightingOnLoad();
     </script>
