--- a/data_new_htmleditorv4.htm
+++ b/data_new_htmleditorv4.htm
@@ -976,7 +976,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside.htm");
+    $('aside').load("aside_cms.htm");
     </script>
 </body>
 
