--- a/aside_ticc.htm
+++ b/aside_ticc.htm
@@ -126,11 +126,12 @@
             </li-->
             <li><a href="#">
                     <img src="images/iot_icon/todo.svg" alt="">
-                    <span>備用選單</span>
+                    <span>客製化管理</span>
                 </a>
                 <ul>
-                    <li><a href="#"><span>第二層選單</span></a></li>
-                    <li><a href="#"><span>第二層選單</span></a></li>
+                    <li><a href="#"><span>空間管理</span></a></li>
+                    <li><a href="#"><span>預約管理</span></a></li>
+                    <li><a href="#"><span>聯絡我們管理</span></a></li>
                 </ul>
             </li>
         </ul>
