--- a/index_list.html
+++ b/index_list.html
@@ -223,9 +223,9 @@
             </table>
         </div>
 
-        <div class="table_wrapper" style="display:none;">
+        <div class="table_wrapper">
             <table>
-              <caption>TICC AP功能 - 4/25更新</caption>
+              <caption>TICC 客製化功能 - 4/25更新</caption>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -236,10 +236,20 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>AP功能：場地管理</td>
+                        <td>AP功能：空間管理</td>
                         <td>
                             <ul>
-                                <li>1.場地清單 <a href="#" target="_blank"></a></li>
+                                <li>1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
+                                <li>2.新增/編修場地 <a href="#" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：預約管理</td>
+                        <td>
+                            <ul>
+                                <li>1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
                                 <li>2.新增/編修場地 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
