--- a/index_list.html
+++ b/index_list.html
@@ -249,8 +249,8 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
-                                <li>1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
-                                <li>2.新增/編修場地 <a href="#" target="_blank"></a></li>
+                                <li>1.預約清單 <a href="#" target="_blank"></a></li>
+                                <li>2.預約管理 <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
