--- a/space_list.htm
+++ b/space_list.htm
@@ -105,10 +105,17 @@
                                 <div class="_head">
                                     <!-- 資料分類 -->
                                     <div class="tag">
+                                        狀態：
                                         <ul>
                                             <li><a href="#">全部</a></li>
                                             <li class="active"><a href="#">啟用中</a></li>
                                             <li><a href="#">未啟用</a></li>
+                                        </ul>
+                                        ｜ 類型：
+                                        <ul>
+                                            <li class="active"><a href="#">全部</a></li>
+                                            <li><a href="#">合併</a></li>
+                                            <li><a href="#">單間</a></li>
                                         </ul>
                                     </div>
                                     <!-- 資料處理 -->
@@ -201,7 +208,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -250,7 +257,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -299,7 +306,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -345,7 +352,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -391,7 +398,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -437,7 +444,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -486,7 +493,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -534,7 +541,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -583,7 +590,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -631,7 +638,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -677,7 +684,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -726,7 +733,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -775,7 +782,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -821,7 +828,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                         <div class="item">
@@ -867,7 +874,7 @@
                                                 </ul>
                                             </div>
                                             <div class="btn-grp">
-                                                <button class="btn btn-green">預約管理</button>
+                                                <button class="btn btn-green">租用狀態管理</button>
                                             </div>
                                         </div>
                                     </div>
