--- a/index_list.html
+++ b/index_list.html
@@ -240,7 +240,7 @@
                         <td>
                             <ul>
                                 <li>1.場地清單 <a href="space_list.htm" target="_blank"></a></li>
-                                <li>2.新增/編修場地 <a href="#" target="_blank"></a></li>
+                                <li>2.新增/編修場地 <a href="data_spaceedit.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
