--- a/index_list.html
+++ b/index_list.html
@@ -196,7 +196,7 @@
                                 <li>單元上稿 <a href="data_list.htm" target="_blank"></a></li>
                                 <li>新增/編修資料 <a href="data_new_update.htm" target="_blank"></a><br>
                                     <font style="color:red;">*4/28: (1)修正處理 Animated Labels for date/datetime-local 會卡在一起的效果；(2)圖檔/檔案上傳區塊的註解文字，需同時更新 fileUpload.css</font></li>
-                                <!--li>編修資料 <a href="data_new2.htm" target="_blank"></a></li-->
+                                <li>檔案上傳中遮罩 <a href="data_new_uploading.htm" target="_blank"></a></li>
                             </ul>
                             <p>測試更新TinyMCE版本：https://www.tiny.cloud/docs-4x/quick-start/</p>
                             <ul>
