--- a/data_new_uploading.htm
+++ b/data_new_uploading.htm
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <div id="loadingNow" name="loadingNow" style="display:none;">
+        <div class="loading"></div><span>檔案上傳中，請稍後</span>
+    </div>
+    <script>document.getElementById("loadingNow").style.display="flex";</script>
     <div class="wrapper">
         <!-- header load header.htm -->
         <header></header>
@@ -883,9 +887,6 @@
         </div>
     </div>
 
-    <div class="upload_area">
-        <div class="loading"></div><span>檔案上傳中，請稍後</span>
-    </div>
 
     <!-- JS-->
     <script src="js/jquery-3.3.1.min.js"></script>
@@ -911,6 +912,7 @@
     $('header').load("header.htm");
     $('aside').load("aside.htm");
     </script>
+    
 </body>
 
 </html>
