--- a/index_list.html
+++ b/index_list.html
@@ -249,8 +249,43 @@
                         <td>AP功能：預約管理</td>
                         <td>
                             <ul>
+                                <li>1.預約清單 <a href="ilosh_reservationList.htm" target="_blank"></a></li>
+                                <!--li>2.預約管理 <a href="#" target="_blank"></a></li-->
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="table_wrapper">
+            <table>
+              <caption>勞安所 客製化功能 - 6/1更新</caption>
+                <thead>
+                    <tr>
+                        <th class="num">編號</th>
+                        <th>頁面名稱</th>
+                        <th>檔案名稱</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：空間管理</td>
+                        <td>
+                            <ul>
+                                <li>1.場地清單 <a href="ilosh_space_list.htm" target="_blank"></a></li>
+                                <li>2.新增/編修場地 <a href="ilosh_data_spaceedit.htm" target="_blank"></a></li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>AP功能：預約管理</td>
+                        <td>
+                            <ul>
                                 <li>1.預約清單 <a href="reservationList.htm" target="_blank"></a></li>
-                                <li>2.預約管理 <a href="#" target="_blank"></a></li>
+                                <!--li>2.預約管理 <a href="#" target="_blank"></a></li-->
                             </ul>
                         </td>
                     </tr>
