--- a/login.htm
+++ b/login.htm
@@ -28,10 +28,11 @@
         <div class="login">
             <h1>
                 <div class="pic">
-                    <img src="images/TJ_logo.png" alt="">
-                    <!--img src="images/W_logo.png" alt="W CMS Lite"-->
+                    <img src="images/ilosh.png" alt="">
+                    <!--img src="images/TJ_logo.png" alt="">
+                    <img src="images/W_logo.png" alt="W CMS Lite"-->
                 </div>
-                <span>台中視界網 網站管理平台</span>
+                <span>網站管理平台</span>
             </h1>
             <div class="flex-form">
                 <div class="form_grp">
