--- a/ilosh_data_spaceedit.htm
+++ b/ilosh_data_spaceedit.htm
@@ -847,7 +847,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside_ticc.htm");
+    $('aside').load("aside_ilosh.htm");
     </script>
 </body>
 
