--- a/index_list.html
+++ b/index_list.html
@@ -76,10 +76,16 @@
     </style>
 </head>
 <body>
+    <script>
+        var date = document.lastModified;
+        document.write("Last Modified: "+date);
+    </script>
+
     <div class="demo_wrap">
         <h1><img src="images/W_logo.png" alt="W CMS Lite" style="max-height:50px;width:auto;vertical-align:middle;margin-right:10px;">
             <a href="index_list.html">W CMS管理端</a></h1>
         <div class="btn_grp" style="float:right;">
+            <span id="current_time"></span>
             <a href="https://github.com/LiuCC910/CMS_UI" class="btn">切版檔案更新請按此下載</a>
         </div>
         <hr style="clear:both">
