--- a/ilosh_space_list.htm
+++ b/ilosh_space_list.htm
@@ -912,7 +912,7 @@
     <script src="vendor/highlight/highlight.pack.js"></script>
     <script>
     $('header').load("header.htm");
-    $('aside').load("aside_ticc.htm");
+    $('aside').load("aside_ilosh.htm");
     </script>
 </body>
 
